--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
-title: Elkhan Ismayilzada
+title: Minjae Lee
 position: Graduate Student
 affiliation: UNIST
-email: elkhan (at) unist.ac.kr
+email: lmjbsj@unist.ac.kr
 keywords:
-google_scholar: https://scholar.google.com/citations?user=eDlBK6MAAAAJ&hl=en
-github_link: https://github.com/elkhanzada
-linkedin: https://www.linkedin.com/in/elkhanzada
+google_scholar: 
+# https://scholar.google.com/citations?user=eDlBK6MAAAAJ&hl=en
+github_link: https://github.com/minjae-lulu
+# linkedin: https://www.linkedin.com/in/elkhanzada
 avatar: ./assets/img/mypic.jpeg
 google_analytics: UA-111540567-4
 favicon: ./assets/img/mypic.jpeg
 favicon_dark: ./assets/img/mypic.jpeg
-description: Elkhan Ismayilzada's homepage
+description: Minjae Lee's homepage
 remote_theme: yaoyao-liu/minimal-light
