--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ affiliation: UNIST
 email: lmjbsj@unist.ac.kr
 keywords:
 
-# google_scholar: https://scholar.google.com/citations?user=eDlBK6MAAAAJ&hl=en
+google_scholar: https://scholar.google.com/citations?hl=ko&user=BG206AgAAAAJ
 github_link: https://github.com/minjae-lulu
 youtube: https://www.youtube.com/@aigsmusic
 youtube1: https://www.youtube.com/@genesisbeats8070
