--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Minjae Lee
 position: Graduate Student
-affiliation: UNIST
-email: lmjbsj@unist.ac.kr
+affiliation: SKKU
+email: lmjlss@skku.edu
 keywords:
 
 google_scholar: https://scholar.google.com/citations?hl=ko&user=BG206AgAAAAJ
