--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Minjae Lee
+title: Sibaek Lee
 position: Graduate Student
 affiliation: SKKU
 email: lmjlss@skku.edu
@@ -14,5 +14,5 @@ avatar: ./assets/img/mypic.jpeg
 google_analytics: UA-111540567-4
 favicon: ./assets/img/mypic.jpeg
 favicon_dark: ./assets/img/mypic.jpeg
-description: Minjae Lee's homepage
+description: Sibaek Lee's homepage
 remote_theme: yaoyao-liu/minimal-light
