--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ google_scholar: https://scholar.google.com/citations?hl=ko&user=BG206AgAAAAJ
 github_link: https://github.com/minjae-lulu
 youtube: https://www.youtube.com/@aigsmusic
 youtube1: https://www.youtube.com/@genesisbeats8070
-instagram: https://www.instagram.com/codingboy_zenesis/
+linkedin: https://www.linkedin.com/in/sibaek-lee-008b1a2a1/
 
 avatar: ./assets/img/mypic.jpeg
 google_analytics: UA-111540567-4
